--- a/test/fixtures/form_with_custom_attributes.html
+++ b/test/fixtures/form_with_custom_attributes.html
@@ -1,1 +1,1 @@
-<form action="#" method="post"><input name="name" type="text" value="rob" class="custom-class"></form>
+<form action="#" method="post"><label for="name">Name</label><input name="name" type="text" value="rob" class="custom-class"></form>
